tests/macro-tests/cases/widget_new/property_generic2.stderr
error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
 --> cases/widget_new/property_generic2.rs:7:25
  |
7 |         value::<bool> = 0;
  |         -----           ^ the trait `IntoVar<bool>` is not implemented for `{integer}`
  |         |
  |         required by a bound introduced by this call
  |
  = note: `IntoVar<T>` is implemented for all `T: VarValue`
  = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `Toggle::value`
 --> $WORKSPACE/crates/zng-wgt-toggle/src/lib.rs
  |
  | pub fn value<T: VarValue>(child: impl IntoUiNode, value: impl IntoVar<T>) -> UiNode {
  |                                                           ^^^^^^^^^^ required by this bound in `Toggle::value`
